Pending changes exported from your codespace

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+h1,
+p {
+  font-size: 5vh;
+  margin: 10px 0;
+}
